Refact the UserMapper

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-DATABASE_URL=
+DB_HOST=localhost
+DB_PORT=1433
+DB_USERNAME=sa
+DB_PASSWORD=
+DB_DATABASE=nestapi
+
+DATABASE_URL="sqlserver://${DB_HOST}:${DB_PORT};database=${DB_DATABASE};user=${DB_USERNAME};password=${DB_PASSWORD};trustServerCertificate=true"
+
 
 JWT_SECRET_KEY=
 JWT_EXPIRATION_TYPE=
